test/parse/module/bad-memory-init-size-negative.txt
;;; ERROR: 1
(module (memory -100))
(;; STDERR ;;;
out/test/parse/module/bad-memory-init-size-negative.txt:2:17: syntax error, unexpected INT, expecting NAT
(module (memory -100))
                ^^^^
;;; STDERR ;;)
